<resources>
    <string name="app_name">TeacherPortals</string>
    <string name="studnet_list">Studnet List</string>
    <string name="syllabus">Syllabus</string>
    <string name="course">Course</string>
    <string name="marks">Marks</string>
    <string name="timetable">TimeTable</string>
    <string name="upcomming_event">Upcomming Event</string>
    <string name="leave_application">Leave Application</string>
    <string name="holidays">Holidays</string>
    <string name="submit">submit</string>
    <string name="internal_exam_results">Internal Exam Results :</string>

    <string name="title">title</string>
    <string name="select_a_file">select_a_file</string>
    <string name="forgot_password" />
    <string name="lecture_no">Lecture_no</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="branch">branch</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>

</resources>
