<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/student_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_student_list"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studnet_list"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/syllabus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_syllabus"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/syllabus"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_course"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/marks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_result"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marks"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    android:layout_margin="20dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_calendar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timetable"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    android:layout_margin="20dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_holidays"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holidays"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_leave_application"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_application"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


                 </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>